tests/snapshots/examples_fixtures/Modules__MathConstants.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/MathConstants.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `Modules.MathConstants` doesn't match file path `examples/Modules/MathConstants.flx`.

  examples/Modules/MathConstants.flx:7:1
  |
7 | module Modules.MathConstants {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
